renamed to image-uploader

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-image-upload",
+  "name": "angular-image-uploader",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
