--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-image-upload",
+  "name": "angular-image-uploader",
   "version": "0.0.1",
-  "main": "dist/imageUpload.js",
+  "main": "dist/imageUploader.js",
   "ignore": [
     "**/.*",
     "app", 
